@@ -49,6 +49,9 @@
 Atf_Cleanup=$(atf-config -t atf_libexecdir)/atf-cleanup
 Atf_Format=$(atf-config -t atf_libexecdir)/atf-format
 
+# List of blocked signals, to be processed when unblocked.
+Held_Signals=
+
 # A boolean variable that indicates whether we are parsing a test case's
 # head or not.
 Parsing_Head=false
@@ -700,6 +703,9 @@ _atf_run_body()
         ;;
     esac
 
+    # Restore all signals to their default behavior for the child process.
+    trap -
+
     ${1}_body
 }
 
@@ -714,6 +720,13 @@ _atf_run_body()
 _atf_run_tc()
 {
     _atf_parse_head ${1}
+
+    # Block some signals while we mess with temporary files so that we can
+    # clean them up later on.
+    Held_Signals=
+    trap _atf_sighup_handler SIGHUP
+    trap _atf_sigint_handler SIGINT
+    trap _atf_sigterm_handler SIGTERM
 
     echo "tc-start: ${Test_Case}" >&${Results_Fd}
 
@@ -751,13 +764,23 @@ _atf_run_tc()
 
     # Set a default exit status if the test case did not report any.
     if [ -z "$(cat ${Results_File})" ]; then
-        ( atf_fail "Test case did not report any status; bogus test" )
+        if [ -n "${Held_Signals}" ]; then
+            ( atf_fail "Test case was interrupted by${Held_Signals}" )
+        else
+            ( atf_fail "Test case did not report any status; bogus test" )
+        fi
     fi
 
     # Print the result of the test case and clean up the temporary file.
     echo "tc-end: ${Test_Case}, $(cat ${Results_File})" >&${Results_Fd}
     rm -f ${Results_File}
     Results_File=
+
+    # Restore blocked signals and process them.
+    trap - SIGHUP SIGINT SIGTERM
+    for s in ${Held_Signals}; do
+        kill -s ${s} $$
+    done
 
     return ${_ret}
 }
@@ -785,6 +808,39 @@ _atf_run_tcs()
     done
 
     ${_ok}
+}
+
+#
+# _atf_sighup_handler
+#
+#   Handler for the SIGHUP signal that registers its occurrence so that
+#   it can be processed at a later stage.
+#
+_atf_sighup_handler()
+{
+    Held_Signals="${Held_Signals} SIGHUP"
+}
+
+#
+# _atf_sigint_handler
+#
+#   Handler for the SIGINT signal that registers its occurrence so that
+#   it can be processed at a later stage.
+#
+_atf_sigint_handler()
+{
+    Held_Signals="${Held_Signals} SIGINT"
+}
+
+#
+# _atf_sigterm_handler
+#
+#   Handler for the SIGTERM signal that registers its occurrence so that
+#   it can be processed at a later stage.
+#
+_atf_sigterm_handler()
+{
+    Held_Signals="${Held_Signals} SIGTERM"
 }
 
 #
