@@ -88,6 +88,22 @@ cleanup_skip_cleanup()
     fi
 }
 
+atf_test_case cleanup_sigterm
+cleanup_sigterm_head()
+{
+    atf_set "descr" "Helper test case for the t_cleanup test program"
+}
+cleanup_sigterm_body()
+{
+    touch $(atf_config_get tmpfile)
+    kill $$
+    touch $(atf_config_get tmpfile).no
+}
+cleanup_sigterm_cleanup()
+{
+    rm $(atf_config_get tmpfile)
+}
+
 # -------------------------------------------------------------------------
 # Helper tests for "t_config".
 # -------------------------------------------------------------------------
@@ -338,6 +354,7 @@ atf_init_test_cases()
     atf_add_test_case cleanup_pass
     atf_add_test_case cleanup_fail
     atf_add_test_case cleanup_skip
+    atf_add_test_case cleanup_sigterm
 
     # Add helper tests for t_config.
     atf_add_test_case config_unset
